# kdbusaddons

./: CMakeLists.txt
autotests/: dbusinterfacetest.cpp
src/: CMakeLists.txt  kdbusservice.cpp  kdbusservice.h
src/qml/: CMakeLists.txt  dbusinterface.cpp  dbusinterface.h
